fix spacing in the HTML

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
   max-width: 1280px;
   min-height: 900px;
   margin: auto;
-  background-image: url("../images/background2.jpg");
+  background-image: url("../images/background.jpg");
   background-repeat:no-repeat;
   background-size:cover;
 }
